--- a/SiteTestAnglais/Accueil.html
+++ b/SiteTestAnglais/Accueil.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Acceuil</title>
+	<title>Accueil</title>
 	
 	<!-- Feuille de styles -->
 	<!-- <link rel="stylesheet" href="style.css" /> -->
