--- a/SiteTestAnglais/Accueil.html
+++ b/SiteTestAnglais/Accueil.html
@@ -15,6 +15,7 @@
 		<a id='IELTS' href='pages/IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
 		<a id='PEARSON' href='pages/PEARSON.html' title='Présentation du PEARSON'>Le PEARSON</a>
 		<a id='Cambridge' href='pages/Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
+		<a id='TestParEcole' href='pages/TestParEcole.html' title='Les écoles et leurs tests'>Les écoles et leurs tests</a>
 	</nav>
 	
 	<h1>Sommaire</h1>
@@ -22,6 +23,7 @@
 	<p>Le IELTS</p>
 	<p>Le PEARSON</p>
 	<p>Le test de Cambridge</p>
+	<p>Les écoles et leurs tests</p>
 	
 	<h1>Présentation du groupe</h1>
 	<p></p>
