--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
 
                     <li>
-                        <a id='TOEFL' href='pages/TOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
+                        <a id='TOEFL' href='pages/pageTOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
                     </li>
                     <li>
                         <a id='IELTS' href='pages/IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
