--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<title>Accueil</title>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/full-width-pics.css">
 
 	<!-- Feuille de styles -->
 	<!-- <link rel="stylesheet" href="style.css" /> -->
@@ -25,7 +26,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-
+                    <li>
+                        <a href="index.html" id="accueil">Accueil</a>
+                    </li>
                     <li>
                         <a id='TOEFL' href='pages/pageTOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
                     </li>
@@ -53,22 +56,43 @@
         </div>
         <!-- /.container -->
     </nav>
-	<nav id='menu'>
+    <div>
+	<header class="image-bg-fluid-height">
+        <img class="img-responsive img-center" src="http://placehold.it/200x200&text=Logo" alt="">
+    </header>
 
+    <!-- Content Section -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="section-heading">Sommaire</h1>
+                    <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <header class="image-bg-fluid-height">
+        <img class="img-responsive img-center" src="http://placehold.it/200x200&text=Logo" alt="">
+    </header>
 
-
-
-	</nav>
-
-	<h1>Sommaire</h1>
-	<p>Le TOEFL</p>
-	<p>Le IELTS</p>
-	<p>Le PEARSON</p>
-	<p>Le test de Cambridge</p>
-	<p>Les écoles et leurs tests</p>
-
-	<h1>Présentation du groupe</h1>
-	<p></p>
+    <!-- Content Section -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="section-heading">Présentation du groupe</h1>
+                    <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
+
+<footer>
+
+</footer>
