--- a/pages/TOEFL.html
+++ b/pages/TOEFL.html
@@ -45,13 +45,22 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#">About</a>
+                    <a href="index.html" id="accueil">Accueil</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a id='TOEFL' href='pages/TOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a id='IELTS' href='pages/IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
+                </li>
+                <li>
+                    <a id='PEARSON' href='pages/PEARSON.html' title='Présentation du PEARSON'>Le PEARSON</a>
+                </li>
+                <li>
+                    <a id='Cambridge' href='pages/Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
+                </li>
+                <li>
+                    <a id='TestParEcole' href='pages/TestParEcole.html' title='Les écoles et leurs tests'>Les écoles et leurs tests</a>
                 </li>
             </ul>
         </div>
