[1.11] mise a jour des routes

--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -45,22 +45,22 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="index.html" id="accueil">Accueil</a>
+                    <a href='../index.html' id="accueil">Accueil</a>
                 </li>
                 <li>
-                    <a id='TOEFL' href='pages/TOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
+                    <a id='TOEFL' href='TOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
                 </li>
                 <li>
-                    <a id='IELTS' href='pages/IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
+                    <a id='IELTS' href='IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
                 </li>
                 <li>
-                    <a id='PEARSON' href='pages/PEARSON.html' title='Présentation du PEARSON'>Le PEARSON</a>
+                    <a id='PEARSON' href='PEARSON.html' title='Présentation du PEARSON'>Le PEARSON</a>
                 </li>
                 <li>
-                    <a id='Cambridge' href='pages/Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
+                    <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='pages/TestParEcole.html' title='Les écoles et leurs tests'>Les écoles et leurs tests</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les écoles et leurs tests'>Les écoles et leurs tests</a>
                 </li>
             </ul>
         </div>
@@ -101,10 +101,10 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="../js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 
 </body>
 
