--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="section-heading">Sommaire</h1>
-                    <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                    <ol>
+                        <li class="lead section-lead">Titre 1</li>
+                        <li class="section-paragraph">Titre 1.1</li>
+                    </ol>
                 </div>
             </div>
         </div>
