--- a/pages/TOEFL.html
+++ b/pages/TOEFL.html
@@ -79,13 +79,32 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Section Heading</h1>
-                <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                <h1 class="section-heading">Informations sur le test</h1>
+                <p class="lead section-lead">Type de test :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Lieu :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Prix :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Date :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Niveau requis :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Modalité de passage :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Description du test :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Score :</p>
+                <p class="section-paragraph"></p>
+
+                <h1 class="section-heading">Pour vous preparer</h1>
+
+                <p class="lead section-lead">Quelques liens utiles</p>
             </div>
         </div>
     </div>
 </section>
+
 <!-- Footer -->
 <footer>
     <div class="container">
