Toefl et debut pearson

--- a/pages/PEARSON.html
+++ b/pages/PEARSON.html
@@ -80,22 +80,24 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="section-heading">Informations sur le test</h1>
-                <p class="lead section-lead">Type de test :</p>
-                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Le test :</p>
+                <p class="section-paragraph">Le PEARSON </p>
                 <p class="lead section-lead">Lieu :</p>
-                <p class="section-paragraph"></p>
+                <p class="section-paragraph">Ce test ne peut être passer à un seul endroit pour l'instant en France. Le 10ème arrondissement à Paris.</p>
                 <p class="lead section-lead">Prix :</p>
-                <p class="section-paragraph"></p>
+                <p class="section-paragraph">Il coûte environ 145 euros.</p>
                 <p class="lead section-lead">Date :</p>
-                <p class="section-paragraph"></p>
-                <p class="lead section-lead">Niveau requis :</p>
-                <p class="section-paragraph"></p>
+                <p class="section-paragraph">Le test peut être passé à partir du 14 décembre.</p>
                 <p class="lead section-lead">Modalité de passage :</p>
                 <p class="section-paragraph"></p>
-                <p class="lead section-lead">Description du test :</p>
-                <p class="section-paragraph"></p>
-                <p class="lead section-lead">Score :</p>
-                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Les épreuves du test :</p>
+                <p class="section-paragraph">
+                    expression Oral
+                    comprehension Oral
+                    comprehension Ecrite
+                    expression Ecrite</p>
+                <p class="lead section-lead">La notation :</p>
+                <p class="section-paragraph">Le Pearson note 9 catégories entre 0 et 100 puis en fait la moyenne. Chaque épreuve obtient une note</p>
 
                 <h1 class="section-heading">Pour vous preparer</h1>
 
