--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -79,9 +79,32 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Section Heading</h1>
-                <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+                <h1 class="section-heading">Informations sur le test</h1>
+                <p class="lead section-lead">Type de test :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Lieu :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Prix :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Date :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Niveau requis :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Modalité de passage :</p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Description du test :
+                    - 1h 30: D'écrit, il y a deux parties ou le participant devra écrire de 220 mots - à 260 pour chaque partie.
+                        La partie 1 consiste a écrire un essai, dont le fond sera basé sur deux points dans un texte donnée. Il faut expliquer pourquoi un point est plus important que l'autre en argumentant.
+                        La partie 2 consiste a écrire une lettre soit une proposition soit un report soit  une revision, il y aura un sujet et un constext exprès pour guider votre sujet.
+                    - 40 de Comprénsion de l'oral : composée de 4 parties de 30 questions chacune.
+                </p>
+                <p class="section-paragraph"></p>
+                <p class="lead section-lead">Score :</p>
+                <p class="section-paragraph"></p>
+
+                <h1 class="section-heading">Pour vous preparer</h1>
+
+                <p class="lead section-lead">Quelques liens utiles</p>
             </div>
         </div>
     </div>
