changement des logos

--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -71,11 +71,12 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <img class="img-responsive img-center" src="../img/ESOL.png" alt="">
+    <h1>Le guide des tests d'anglais</h1>
 </header>
 
 <!-- Content Section -->
 <section>
+    <img class="img-titre-test img-responsive img-center" src="../img/ESOL.png" alt="">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
