--- a/pages/TOEFL.html
+++ b/pages/TOEFL.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full Width Pics - Start Bootstrap Template</title>
+    <title>Le Test du TOEFL</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -71,11 +71,12 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <img class="img-responsive img-center" src="../img/toefl.gif" alt="">
+    <h1>Le guide des tests d'anglais</h1>
 </header>
 
 <!-- Content Section -->
 <section>
+    <img class="img-toefl img-center img-responsive" src="../img/toefl.gif" alt="">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
