--- a/pages/TestParEcole.html
+++ b/pages/TestParEcole.html
@@ -71,11 +71,12 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <img class="img-responsive img-center" src="http://placehold.it/200x200&text=Logo" alt="">
+    <h1>Le guide des tests d'anglais</h1>
 </header>
 
 <!-- Content Section -->
 <section>
+    <img class="img-titre-test img-responsive img-center" src="http://placehold.it/200x200&text=Logo" alt="">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
