--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- /.container -->
     </nav>
 	<header class="image-bg-fluid-height">
-        <h1>Le guide des tests d'anglais</h1>
+        <h1 class="titre-site">Le guide des tests d'anglais</h1>
     </header>
 
     <!-- Content Section -->
