--- a/pages/IELTS.html
+++ b/pages/IELTS.html
@@ -71,7 +71,7 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <h1>Le guide des tests d'anglais</h1>
+    <h1 class="titre-site">Le guide des tests d'anglais</h1>
 </header>
 
 <!-- Content Section -->
