--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -93,16 +93,33 @@
                 <p class="lead section-lead">Modalité de passage :</p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Description du test :
-                    - 1h 30: D'écrit, il y a deux parties ou le participant devra écrire de 220 mots - à 260 pour chaque partie.
+                   <br>
+                   <p> - 1h 30: D'écrit, il y a deux parties ou le participant devra écrire de 220 mots - à 260 pour chaque     partie.
                         La partie 1 consiste a écrire un essai, dont le fond sera basé sur deux points dans un texte donnée. Il faut expliquer pourquoi un point est plus important que l'autre en argumentant.
-                        La partie 2 consiste a écrire une lettre soit une proposition soit un report soit  une revision, il y aura un sujet et un constext exprès pour guider votre sujet.
-                    - 40 de Comprénsion de l'oral : composée de 4 parties de 30 questions chacune.
+                        La partie 2 consiste a écrire une lettre soit une proposition soit un report soit  une revision, il y aura un sujet et un constext exprès pour guider votre sujet
+                    </p>
+                    <br>
+                    <p>
+                      - 40 minutes de Comprénsion de l'oral : composée de 4 parties de 30 questions chacune.
+                    </p>
+                    <br>
+                    <p>
+                    - 15 minutes d'oral, se déroule à 2 ou à 3 et en plusieurs parties. La prémière partie consiste entre une introduction des candidats par l'examinateur, la deuxième partie vous devez parler de phtos/images que l'éxaminateur vous montrera, dans la partie 3 vous allez élargir certaines idées basés sur des écrits que l'éxaminateur vous donnera, et finalement vous allez dévoir parler et creuser en profondeur les thêmes abordés plus tôt
+                </p>
                 </p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Score :</p>
                 <p class="section-paragraph"></p>
 
                 <h1 class="section-heading">Pour vous preparer</h1>
+                <p class="lead section-paragraph">
+                    C'est important de se familiariser avec les exercices demandés par exemple en les travaillant, ces exercices sont désignés pour montrer ce que vous savez faire en anglais. Si vous n'êtes pas familier avec les éxrcices vous ne serez peut-être pas en position de montrer vos compétences sous le meilleuir jour.
+                    <br>
+                    Pour vous aider a préparer cet éxamen il y a des ressources garuites poour s'entrainer : <a href="http://www.cambridgeenglish.org/learning-english/find-free-resources/">Préparation gratuite ressources</a> (Site en anglais)
+
+                    Il y a aussi possibilité d'acheter des livres en rapport avec cet éxamen afin de le réussir: <a href="http://www.cambridge.org/gb/cambridgeenglish/official-exam-preparation-materials/exam/cambridge-english-advanced-cae-2015"> Ressources payantes </a> (Site en anglais)
+
+                </p>
 
                 <p class="lead section-lead">Quelques liens utiles</p>
             </div>
