--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Le Test de Cambridge</title>
+    <title>Le Test de Cambridge Advanced CAE</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
