--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -83,30 +83,34 @@
                 <h1 class="section-heading">Informations sur le test</h1>
                 <p class="lead section-lead">Type de test :</p>
                 <p class="section-paragraph"></p>
-                <p class="lead section-lead">Lieu :</p>
+                <p class="lead section-lead">Lieu :
+                    <br>
+                    Il y a 1234 centres dans le monde pour pourvoir passer le CAE
+                    <br>
+                    Il y a 42 centres en france habilités pour y réaliser l'éxamen !
+                </p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Prix :</p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Date :</p>
                 <p class="section-paragraph"></p>
-                <p class="lead section-lead">Niveau requis :</p>
+                <p class="lead section-lead">Niveau requis :
+                <br> C1 </p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Modalité de passage :</p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Description du test :
                    <br>
-                   <p> - 1h 30: D'écrit, il y a deux parties ou le participant devra écrire de 220 mots - à 260 pour chaque     partie.
+                    - 1h 30: D'écrit, il y a deux parties ou le participant devra écrire de 220 mots - à 260 pour chaque     partie.
                         La partie 1 consiste a écrire un essai, dont le fond sera basé sur deux points dans un texte donnée. Il faut expliquer pourquoi un point est plus important que l'autre en argumentant.
                         La partie 2 consiste a écrire une lettre soit une proposition soit un report soit  une revision, il y aura un sujet et un constext exprès pour guider votre sujet
-                    </p>
                     <br>
-                    <p>
+
                       - 40 minutes de Comprénsion de l'oral : composée de 4 parties de 30 questions chacune.
-                    </p>
+
                     <br>
-                    <p>
+
                     - 15 minutes d'oral, se déroule à 2 ou à 3 et en plusieurs parties. La prémière partie consiste entre une introduction des candidats par l'examinateur, la deuxième partie vous devez parler de phtos/images que l'éxaminateur vous montrera, dans la partie 3 vous allez élargir certaines idées basés sur des écrits que l'éxaminateur vous donnera, et finalement vous allez dévoir parler et creuser en profondeur les thêmes abordés plus tôt
-                </p>
                 </p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Score :</p>
