--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -127,6 +127,9 @@
                 </p>
 
                 <p class="lead section-lead">Quelques liens utiles</p>
+                <p class="lead sectio-paragraph">
+                    <a href="www.cambridgeenglish.org/fr/images/181151-cae-information-for-candidates-2015-document.pdf">Lien de la brochure du CAE </a> (En anglais)
+                </p>
             </div>
         </div>
     </div>
