--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -47,19 +47,19 @@
                     <a href='../index.html' id="accueil">Accueil</a>
                 </li>
                 <li>
-                    <a id='TOEFL' href='TOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
+                    <a id='TOEFL' href='TOEFL.html' title='Présentation du TOEFL'>TOEFL</a>
                 </li>
                 <li>
-                    <a id='IELTS' href='IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
+                    <a id='IELTS' href='IELTS.html' title='Présentation du IELTS'>IELTS</a>
                 </li>
                 <li>
-                    <a id='PEARSON' href='PEARSON.html' title='Présentation du PEARSON'>Le PEARSON</a>
+                    <a id='PEARSON' href='PEARSON.html' title='Présentation du PEARSON'>PEARSON</a>
                 </li>
                 <li>
                     <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='TestParEcole.html' title='Les écoles et leurs tests'>Les écoles et leurs tests</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
                 </li>
             </ul>
         </div>
@@ -71,7 +71,7 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <h1 class="titre-site">Le guide des tests d'anglais</h1>
+    <h1 class="titre-site">Le guide des tests d'Anglais</h1>
 </header>
 
 <!-- Content Section -->
