--- a/pages/PEARSON.html
+++ b/pages/PEARSON.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Le Test PEARSON</title>
+    <title>Test PEARSON</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -47,19 +47,19 @@
                     <a href='../index.html' id="accueil">Accueil</a>
                 </li>
                 <li>
-                    <a id='TOEFL' href='TOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
+                    <a id='TOEFL' href='TOEFL.html' title='Présentation du TOEFL'>TOEFL</a>
                 </li>
                 <li>
-                    <a id='IELTS' href='IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
+                    <a id='IELTS' href='IELTS.html' title='Présentation du IELTS'>IELTS</a>
                 </li>
                 <li>
-                    <a id='PEARSON' href='PEARSON.html' title='Présentation du PEARSON'>Le PEARSON</a>
+                    <a id='PEARSON' href='PEARSON.html' title='Présentation du PEARSON'>PEARSON</a>
                 </li>
                 <li>
                     <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='TestParEcole.html' title='Les écoles et leurs tests'>Les écoles et leurs tests</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
                 </li>
             </ul>
         </div>
@@ -71,7 +71,7 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <h1 class="titre-site">Le guide des tests d'anglais</h1>
+    <h1 class="titre-site">Le guide des tests d'Anglais</h1>
 </header>
 
 <!-- Content Section -->
@@ -86,19 +86,37 @@
                 <p class="lead section-lead">Lieu :</p>
                 <p class="section-paragraph">Ce test ne peut être passer à un seul endroit pour l'instant en France. Le 10ème arrondissement à Paris.</p>
                 <p class="lead section-lead">Prix :</p>
-                <p class="section-paragraph">Il coûte environ 145 euros.</p>
+                <p class="section-paragraph">Le test coûte 210$ en France se qui fait environ 145 euros.</p>
                 <p class="lead section-lead">Date :</p>
                 <p class="section-paragraph">Le test peut être passé à partir du 14 décembre.</p>
                 <p class="lead section-lead">Modalité de passage :</p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Les épreuves du test :</p>
                 <p class="section-paragraph">
-                    expression Oral
-                    comprehension Oral
-                    comprehension Ecrite
-                    expression Ecrite</p>
+                    <ul>
+                        <li>expression Oral</li>
+                        <li>comprehension Oral</li>
+                        <li>comprehension Ecrite</li>
+                        <li>expression Ecrite</li>
+                    </ul>
+                </p>
                 <p class="lead section-lead">La notation :</p>
-                <p class="section-paragraph">Le Pearson note 9 catégories entre 0 et 100 puis en fait la moyenne. Chaque épreuve obtient une note</p>
+                <p class="section-paragraph">Le Pearson note 9 catégories entre 0 et 100 puis en fait la moyenne. Chaque épreuve obtient une note, celles ci séparée en deux catégories :<br />
+                    Les compétences de communications
+                    <ul>
+                        <li>expression Oral</li>
+                        <li>comprehension Oral</li>
+                        <li>comprehension Ecrite</li>
+                        <li>expression Ecrite</li>
+                    </ul>
+                    Les compétences grammaticales
+                    <ul>
+                        <li>grammaire</li>
+                        <li>prononciation</li>
+                        <li>fluidité</li>
+                        <li>vocabulaire</li>
+                        <li>discours écrit</li>
+                    </ul></p>
 
                 <h1 class="section-heading">Pour vous preparer</h1>
 
