--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html" id="accueil">Accueil</a>
+                        <a href='index.html' id="accueil">Accueil</a>
                     </li>
                     <li>
-                        <a id='TOEFL' href='pages/TOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
+                        <a id='TOEFL' href='pages/TOEFL.html' title='Présentation du TOEFL'>TOEFL</a>
                     </li>
                     <li>
-                        <a id='IELTS' href='pages/IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
+                        <a id='IELTS' href='pages/IELTS.html' title='Présentation du IELTS'>IELTS</a>
                     </li>
                     <li>
-                        <a id='PEARSON' href='pages/PEARSON.html' title='Présentation du PEARSON'>Le PEARSON</a>
+                        <a id='PEARSON' href='pages/PEARSON.html' title='Présentation du PEARSON'>PEARSON</a>
                     </li>
                     <li>
                         <a id='Cambridge' href='pages/Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                     </li>
                     <li>
-                        <a id='TestParEcole' href='pages/TestParEcole.html' title='Les écoles et leurs tests'>Les écoles et leurs tests</a>
+                        <a id='TestParEcole' href='pages/TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
                     </li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
         <!-- /.container -->
     </nav>
 	<header class="image-bg-fluid-height">
-        <h1 class="titre-site">Le guide des tests d'anglais</h1>
+        <h1 class="titre-site">Le guide des tests d'Anglais</h1>
     </header>
 
     <!-- Content Section -->
