--- a/pages/TOEFL.html
+++ b/pages/TOEFL.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Le Test du TOEFL</title>
+    <title>Test du TOEFL</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -47,19 +47,19 @@
                     <a href='../index.html' id="accueil">Accueil</a>
                 </li>
                 <li>
-                    <a id='TOEFL' href='TOEFL.html' title='Présentation du TOEFL'>Le TOEFL</a>
+                    <a id='TOEFL' href='TOEFL.html' title='Présentation du TOEFL'>TOEFL</a>
                 </li>
                 <li>
-                    <a id='IELTS' href='IELTS.html' title='Présentation du IELTS'>Le IELTS</a>
+                    <a id='IELTS' href='IELTS.html' title='Présentation du IELTS'>IELTS</a>
                 </li>
                 <li>
-                    <a id='PEARSON' href='PEARSON.html' title='Présentation du PEARSON'>Le PEARSON</a>
+                    <a id='PEARSON' href='PEARSON.html' title='Présentation du PEARSON'>PEARSON</a>
                 </li>
                 <li>
                     <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='TestParEcole.html' title='Les écoles et leurs tests'>Les écoles et leurs tests</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
                 </li>
             </ul>
         </div>
@@ -71,7 +71,7 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <h1 class="titre-site">Le guide des tests d'anglais</h1>
+    <h1 class="titre-site">Le guide des tests d'Anglais</h1>
 </header>
 
 <!-- Content Section -->
@@ -123,8 +123,16 @@
                 </p>
 
                 <h1 class="section-heading">Pour vous preparer</h1>
-
+                <p class="section-paragraph">Le site du TOEFL étant très complet, il offre la possibilité de préparer le test à partir des différents exercices disponible en ligne. Certain son gratuit mais d’autre son disponible à l’achat.</p>
                 <p class="lead section-lead">Quelques liens utiles</p>
+                <p class="section-paragraph">Le site du TOEFL propose un exemple de test complet pour <a href="https://www.ets.org/Media/Tests/TOEFL/pdf/SampleQuestions.pdf">vous entraîner</a>.<br />
+                Il propose aussi une page proposant de pratiquer des questions des tests déjà passer. Il met a disposition différent enregistrement pour les <a href="https://www.ets.org/toefl/ibt/prepare/quick_prep/">parties oral</a>.<br />
+
+                Il existe aussi un livre officiel permettant de se préparer au test. Il est disponible au format eBook ou papier/DVD pour $22.95 sur le <a href="http://store.ets.org/store/ets/en_US/pd/ThemeID.12805600/productID.330514800/categoryId.3552000">site du TOEFL</a> ou une trentaine d’euro sur Amazon.<br />
+
+                Il est aussi possible de passer des tests après les avoirs acheter sur le <a href="http://toeflpractice.ets.org/">site du TOEFL</a>.<br />
+                Pour plus de renseignement sur les outils disponible rendez vous <a href="https://www.ets.org/fr/toefl/ibt/prepare/">ici</a>.<br />
+                </p>
             </div>
         </div>
     </div>
