--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -80,23 +80,29 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Informations sur le test</h1>
-                <p class="lead section-lead">Type de test :</p>
+                <h1 class="section-heading">Informations sur le test <br><small>Le Test de Cambridge Advanced CAE</small></h1>
+
+                <p class="lead section-lead">Type de test :
+                        <br>
+                        Test destiné pour les personnes ayant envie d'intégrér un des études dans des universités anglaises.
+                </p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Lieu :
                     <br>
                     Il y a 1234 centres dans le monde pour pourvoir passer le CAE
                     <br>
-                    Il y a 42 centres en france habilités pour y réaliser l'éxamen !
+                    Il y a 42 centres en France habilités pour y réaliser l'éxamen !
                     
                     <a href="http://www.cambridgeenglish.org/fr/find-a-centre/">-> Plus d'infos ici</a>
                 </p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Prix :
-                    Le coût d'inscription au Cambridge English Advanced (CAE) dépend du centre d'examen dans lequel vous passez le test, toutefois le prix maximum est de est de 235€
+                   <br>
+                    Le coût d'inscription au Cambridge English Advanced (CAE) dépend du centre d'examen dans lequel vous passez le test, toutefois le prix maximum est de 235€
                 </p>
                 <p class="section-paragraph"></p>
                 <p class="lead section-lead">Date :
+                    <br>
                     Chaque mois, des dates sont proposées pour passer le Cambridge English Advanced (CAE).
                         L’inscription est simple et vous pouvez vous inscrire à un examen sur ordinateur jusqu’à une semaine avant la date, suivant le centre d'éxamen choisi.
                         
