--- a/pages/IELTS.html
+++ b/pages/IELTS.html
@@ -80,7 +80,7 @@
     <div class="container">
         <div class="row">
             <p class="col-lg-12">
-                <h1 class="section-heading">Informations sur le test</h1>
+                <h1 class="section-heading">Informations sur le test<br/><small>Le Test IELTS</small></h1>
                 <p class="lead section-lead">Tarifs et lieux</p>
                 <p class="section-paragraph">Le prix pour passer le IELTS est de 215 euros.<br/>
                     Le British Council organise des sessions IELTS dans quatre villes à travers la France : Paris, Nantes, Lyon, et Marseille.<br/>
