--- a/pages/PEARSON.html
+++ b/pages/PEARSON.html
@@ -80,7 +80,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Informations sur le test</h1>
+                <h1 class="section-heading">Informations sur le test<br/><small>Le Test PEARSON</small></h1>
                 <p class="lead section-lead">Le test :</p>
                 <p class="section-paragraph">Le PEARSON </p>
                 <p class="lead section-lead">Lieu :</p>
