--- a/pages/TOEFL.html
+++ b/pages/TOEFL.html
@@ -80,7 +80,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="section-heading">Informations sur le test</h1>
+                <h1 class="section-heading">Informations sur le test<br/><small>Le Test du TOEFL</small></h1>
                 <p class="lead section-lead">Lieu de passage :</p>
                 <p class="section-paragraph">Le TOEFL peut se passer dans le monde entier, et dans plus d’une trentaine de sites de France. Il est possible de le passer dans toute les grandes villes de France (Bordeaux, Paris, Lille, Limoges, Lyon, Marseille..).</p>
                 <p class="lead section-lead">Prix :</p>
