--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -83,39 +83,41 @@
                 <h1 class="section-heading">Informations sur le test <br><small>Le Test de Cambridge Advanced CAE</small></h1>
 
                 <p class="lead section-lead">Type de test :
-                        <br>
+
+                </p>
+                <p class="section-paragraph">
                         Test destiné pour les personnes ayant envie d'intégrér un des études dans des universités anglaises.
                 </p>
-                <p class="section-paragraph"></p>
                 <p class="lead section-lead">Lieu :
-                    <br>
-                    Il y a 1234 centres dans le monde pour pourvoir passer le CAE
+                </p>
+                <p class="section-paragraph">Il y a 1234 centres dans le monde pour pourvoir passer le CAE
                     <br>
                     Il y a 42 centres en France habilités pour y réaliser l'éxamen !
                     
                     <a href="http://www.cambridgeenglish.org/fr/find-a-centre/">-> Plus d'infos ici</a>
                 </p>
-                <p class="section-paragraph"></p>
-                <p class="lead section-lead">Prix :
-                   <br>
+                <p class="lead section-lead">Prix :</p>
+                <p class="section-paragraph">
                     Le coût d'inscription au Cambridge English Advanced (CAE) dépend du centre d'examen dans lequel vous passez le test, toutefois le prix maximum est de 235€
                 </p>
-                <p class="section-paragraph"></p>
-                <p class="lead section-lead">Date :
-                    <br>
-                    Chaque mois, des dates sont proposées pour passer le Cambridge English Advanced (CAE).
+                <p class="lead section-lead">Date : </p>
+                <p class="section-paragraph">Chaque mois, des dates sont proposées pour passer le Cambridge English Advanced (CAE).
+                        L’inscription est simple et vous pouvez vous inscrire à un examen sur ordinateur jusqu’à une semaine avant la date, suivant le centre d'éxamen choisi.
+
+                        <a href="http://www.cambridgeenglish.org/fr/exams/advanced/exam-dates/">Infos </a>
+                </p>
+                <p class="lead section-lead">Niveau requis :<br> C1 </p>
+
+                <p class="section-paragraph"> Chaque mois, des dates sont proposées pour passer le Cambridge English Advanced (CAE).
                         L’inscription est simple et vous pouvez vous inscrire à un examen sur ordinateur jusqu’à une semaine avant la date, suivant le centre d'éxamen choisi.
                         
                         <a href="http://www.cambridgeenglish.org/fr/exams/advanced/exam-dates/">Infos </a>
                 </p>
-                <p class="section-paragraph"></p>
-                <p class="lead section-lead">Niveau requis :
-                <br> C1 </p>
-                <p class="section-paragraph"></p>
                 <p class="lead section-lead">Modalité de passage :</p>
                 <p class="section-paragraph"></p>
-                <p class="lead section-lead">Description du test :
-                   <br>
+                <p class="lead section-lead">Description du test : </p>
+                <p class="section-paragraph">
+                    <br>
                     - 1h 30: D'écrit, il y a deux parties ou le participant devra écrire de 220 mots - à 260 pour chaque     partie.
                         La partie 1 consiste a écrire un essai, dont le fond sera basé sur deux points dans un texte donnée. Il faut expliquer pourquoi un point est plus important que l'autre en argumentant.
                         La partie 2 consiste a écrire une lettre soit une proposition soit un report soit  une revision, il y aura un sujet et un constext exprès pour guider votre sujet
@@ -127,7 +129,6 @@
 
                     - 15 minutes d'oral, se déroule à 2 ou à 3 et en plusieurs parties. La prémière partie consiste entre une introduction des candidats par l'examinateur, la deuxième partie vous devez parler de phtos/images que l'éxaminateur vous montrera, dans la partie 3 vous allez élargir certaines idées basés sur des écrits que l'éxaminateur vous donnera, et finalement vous allez dévoir parler et creuser en profondeur les thêmes abordés plus tôt
                 </p>
-                <p class="section-paragraph"></p>
                 <p class="lead section-lead">Score :
                     <table class="table">
                         <tr>
