--- a/pages/IELTS.html
+++ b/pages/IELTS.html
@@ -183,7 +183,7 @@
                     Des vestiaires fermés à clé vous seront fournis pour mettre les affaires que vous avez amenées. Nous vous conseillons de ne rien prendre de valeur avec vous car le British Council ne se tiendra pas responsable de la perte ou vol de vos objets personnels.
                     </p>
 
-                    <h1 class="section-heading">Pour ceux qui aime lire</h1>
+                    <h1 class="section-heading">Pour ceux qui aiment lire</h1>
                     <p class="lead section-lead">How to prepare for IELTS</p>
                     <p class="section-paragraph">
                         How to Prepare for IELTS est publié par le British Council et comprend conseils, exercices et examens blancs pour les quatre domaines de compétences : compréhension orale, compréhension écrite, expression écrite et expression orale pour les deux versions de l’examen, Academic et General Training. Il inclut un CD audio vous fournissant des exemples pour les épreuves de compréhension et expression orales.
