--- a/pages/PEARSON.html
+++ b/pages/PEARSON.html
@@ -87,8 +87,6 @@
                 <p class="section-paragraph">Le test coûte 210$ en France se qui fait environ 145 euros.</p>
                 <p class="lead section-lead">Date :</p>
                 <p class="section-paragraph">Le test peut être passé à partir du 14 décembre.</p>
-                <p class="lead section-lead">Modalité de passage :</p>
-                <p class="section-paragraph"></p>
                 <p class="lead section-lead">Les épreuves du test :</p>
                 <p class="section-paragraph">
                     <ul>
@@ -117,8 +115,9 @@
                     </ul></p>
 
                 <h1 class="section-heading">Pour vous preparer</h1>
-
-                <p class="lead section-lead">Quelques liens utiles</p>
+                <p class="section-paragraph">Le site du PEARSON offre la possibilité de préparer le test à partir de différents exercices disponible en ligne. La plupart sont gratuits.<a href="http://www.pearson.fr/ELT/">S'entrainer maintenant</a> <br/>
+                 Ce site offre aussi la possibilité d'acheté des livres pour s'entrainer.<a href="http://www.pearson.fr/catalogue/">Catalogue</a>
+                </p>
             </div>
         </div>
     </div>
