--- a/pages/TOEFL.html
+++ b/pages/TOEFL.html
@@ -123,7 +123,7 @@
                 </p>
 
                 <h1 class="section-heading">Pour vous preparer</h1>
-                <p class="section-paragraph">Le site du TOEFL étant très complet, il offre la possibilité de préparer le test à partir des différents exercices disponible en ligne. Certain son gratuit mais d’autre son disponible à l’achat.</p>
+                <p class="section-paragraph">Le site du TOEFL étant très complet, il offre la possibilité de préparer le test à partir des différents exercices disponible en ligne. Certain sont gratuit mais d’autre sont disponible à l’achat.</p>
                 <p class="lead section-lead">Quelques liens utiles</p>
                 <p class="section-paragraph">Le site du TOEFL propose un exemple de test complet pour <a href="https://www.ets.org/Media/Tests/TOEFL/pdf/SampleQuestions.pdf">vous entraîner</a>.<br />
                 Il propose aussi une page proposant de pratiquer des questions des tests déjà passer. Il met a disposition différent enregistrement pour les <a href="https://www.ets.org/toefl/ibt/prepare/quick_prep/">parties oral</a>.<br />
