--- a/pages/PEARSON.html
+++ b/pages/PEARSON.html
@@ -81,12 +81,9 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="section-heading">Informations sur le test<br/><small>Le Test PEARSON</small></h1>
-                <p class="lead section-lead">Lieu :</p>
-                <p class="section-paragraph">Ce test ne peut être passer à un seul endroit pour l'instant en France. Le 10ème arrondissement à Paris.</p>
-                <p class="lead section-lead">Prix :</p>
-                <p class="section-paragraph">Le test coûte 210$ en France se qui fait environ 145 euros.</p>
-                <p class="lead section-lead">Date :</p>
-                <p class="section-paragraph">Le test peut être passé à partir du 14 décembre.</p>
+                <p class="lead section-lead">Lieu, Prix, Date :</p>
+                <p class="section-paragraph">Ce test ne peut être passer à un seul endroit pour l'instant en France. Le 10ème arrondissement à Paris.<br/>
+                    Il coûte 210$ en France se qui fait environ 145 euros et il peut être passé à partir du 14 décembre.</p>
                 <p class="lead section-lead">Les épreuves du test :</p>
                 <p class="section-paragraph">
                     <ul>
